refactor: update storage setting
